--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <title>I am Abhishek Ram!</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
+  <meta property="og:title" content="The title of the sharing preview" />
+  <meta property="og:description" content="The first few lines of content below the title" />
+  <meta property="og:image" content="img/AbhishekRam_headshot.JPG" />
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
