--- a/index.html
+++ b/index.html
@@ -46,16 +46,14 @@
       <h1><a href="index.html">Abhishek Ram</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <h2> Engineering A Better World For Us All </h2>
-      <a href='/img/leafrot.gif'></a>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="#header">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="https://drive.google.com/file/d/141CtG2lJuMXc-Z1QUiNcIdRDIOeYM7lg/preview" target="blank">Resume</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="https://drive.google.com/file/d/1TDC8WuqyrQC9ghjUeAeVJLClYO0YHc-p/view?usp=sharing" target="blank">Projects</a></li>
+          <li><a href="#services">Services &amp; Projects</a></li>
+          <li><a href="#portfolio">Visuals</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
@@ -80,7 +78,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="img/AbhishekRam_headshot.JPG" alt="" class="img-fluid"/>
+          <img src="img/AbhishekRam_headshot.jpg" alt="" class="img-fluid"/>
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Mechanical Engineering with a Mathematical Focus</h3>
@@ -450,23 +448,35 @@
 
       <div class="section-title">
         <p> </p>
-        <p>What I Can Do For You!</p>
+        <p>What I Bring To The Table!</p>
       </div>
 
       <div class="row">
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-          <div class="icon-box">
+          <div class="icon-box"  class="flipLightBox">
             <div class="icon"><i class="icofont-mill"></i></div>
             <h4><a href="">Finite Element Analysis</a></h4>
             <p>Structural Mechanics, Computational Fluid Dynamics, Frequency Response Analysis</p>
+            <p> &nbsp; </p>
+            <a class="btn btn-success" href="https://drive.google.com/file/d/1IguxUxV1uh7RXZq6dDZ3qgrOt7uukVLd/view?usp=sharing" target="_blank">Surveying The Efforts for Simulating the Human Diaphragm</a>
+            <p> &nbsp; </p>
+            <a class="btn btn-success" href="https://www.youtube.com/playlist?list=PLe0EJN9Fts8tqRm1JE0QtShqaE7VvoTnp" target="_blank">Onboarding to Structural Simulation on <b>3D</b>EXPERIENCE</a>
+            <p> &nbsp; </p>
+            <a class="btn btn-success" href="https://drive.google.com/file/d/18IeU6lby89XNUhdISfl5tRSF6mpK-Z3R/view?usp=sharing" target="_blank">PowerPass: The Portable Phone Charger Dispenser</a>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
             <div class="icon"><i class="icofont-binary"></i></div>
-            <h4><a href="">Solver Generation</a></h4>
+            <h4><a href="">Mathematical Modeling</a></h4>
             <p>Multidisciplinary applications, process modeling, scientific computing</p>
+            <p> &nbsp; </p>
+            <a class="btn btn-success" href="https://drive.google.com/file/d/1CxkeS3fuk8UsYgtG_TUSAOBJpjryBsnF/view?usp=sharing" target="_blank">Modeling and Optimizing Battery Expenditure of An Autonomous Electric Vehicle</a>
+            <p> &nbsp; </p>
+            <a class="btn btn-success" href="https://drive.google.com/file/d/16G0aq7xBGL7jvccUNYBdTG4jJXSc_Rjx/preview" target="_blank">Applying Machine Learning to Improve Various Digital Twin Simulation Models</a>
+            <p> &nbsp; </p>
+            <a class="btn btn-success" href="https://drive.google.com/file/d/1-UTFf_XpwSSEhA9nS2OQo9ow6soyAgPL/view?usp=sharing" target="_blank">Optimizing the Bike Rebalancing Procedure for ValleyBike Share in Amherst, MA, USA</a>
           </div>
         </div>
 
@@ -474,7 +484,13 @@
           <div class="icon-box">
             <div class="icon"><i class="icofont-gear"></i></div>
             <h4><a href="">C.A.D. Generation</a></h4>
-            <p>Product Development, Generative Design, and Optimization</p>
+            <p>New Product Generation and Development with an Entrepreneurial Spirit</p>
+            <p> &nbsp; </p>
+            <a class="btn btn-success" href="https://drive.google.com/file/d/1Xt7LLtC6ugUMRo6nEdMLuckr6IXe5duR/preview" target="_blank">TransPharm: The Pharmacy After Dark for Everyone</a>
+            <p> &nbsp; </p>
+            <a class="btn btn-success" href="https://drive.google.com/file/d/1rs1U6k6W3JIUPx7J9WAlrADRJG4EuQgG/preview" target="_blank">Autonomous Off-Grid Vending Machine with Thermo-electric Climate Control <i>(pat. pend.)</i></a>
+            <p> &nbsp; </p>
+            <a class="btn btn-success" href="https://drive.google.com/file/d/1vlChb59o7hgmjS-GaBAPAtfN96P85kBu/preview" target="_blank">UMass Amherst Unmanned Aerial Vehicle: Uncle Sam</a>
           </div>
         </div>
 
