--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Citizenship:</strong> United States</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> December 4<sup>th</sup>, 1997</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 22</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Location:</strong> Eastern Massachusetts, USA</li>
               </ul>
             </div>
