--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="icofont-world"></i></div>
-            <h4><a href="">Multilingual</a></h4>
+            <h4><a href="">Multilinguist</a></h4>
             <p>English, Spanish, Telugu - can understand several others, and am willing to learn</p>
           </div>
         </div>
