--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>I am Abhishek Ram!</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
-  <meta property="og:title" content="The title of the sharing preview" />
-  <meta property="og:description" content="The first few lines of content below the title" />
+  <meta property="og:title" content="Abhishek Ram" />
+  <meta property="og:description" content="Engineering a Better World For Us All" />
   <meta property="og:image" content="img/AbhishekRam_headshot.JPG" />
 
   <!-- Favicons -->
