--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="img/AbhishekRam_headshot.JPG" alt="" class="img-fluid"/>
+          <img src="img/AbhishekRam_headshot.jpg" alt="" class="img-fluid"/>
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Mechanical Engineering with a Mathematical Focus</h3>
@@ -122,7 +122,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
           <div class="count-box">
             <i class="icofont-bulb-alt"></i>
-            <span data-toggle="counter-up">14</span>
+            <span data-toggle="counter-up">16</span>
             <p>Completed Projects</p>
           </div>
         </div>
@@ -460,8 +460,6 @@
             <p> &nbsp; </p>
             <a class="btn btn-success" href="https://drive.google.com/file/d/1IguxUxV1uh7RXZq6dDZ3qgrOt7uukVLd/view?usp=sharing" target="_blank">Surveying The Efforts for Simulating the Human Diaphragm</a>
             <p> &nbsp; </p>
-            <a class="btn btn-success" href="https://www.youtube.com/playlist?list=PLe0EJN9Fts8tqRm1JE0QtShqaE7VvoTnp" target="_blank">Onboarding to Structural Simulation on <b>3D</b>EXPERIENCE</a>
-            <p> &nbsp; </p>
             <a class="btn btn-success" href="https://drive.google.com/file/d/18IeU6lby89XNUhdISfl5tRSF6mpK-Z3R/view?usp=sharing" target="_blank">PowerPass: The Portable Phone Charger Dispenser</a>
           </div>
         </div>
@@ -470,11 +468,9 @@
           <div class="icon-box">
             <div class="icon"><i class="icofont-binary"></i></div>
             <h4><a href="">Mathematical Modeling</a></h4>
-            <p>Multidisciplinary applications, process modeling, scientific computing</p>
+            <p>Multidisciplinary applications and process modeling with focus on optimization</p>
             <p> &nbsp; </p>
             <a class="btn btn-success" href="https://drive.google.com/file/d/19dYsAdJA2jSbDSs4XMcfVFFhwHxnzoEP/view?usp=sharing" target="_blank">Modeling and Optimizing Battery Expenditure of An Autonomous Electric Vehicle</a>
-            <p> &nbsp; </p>
-            <a class="btn btn-success" href="https://drive.google.com/file/d/16G0aq7xBGL7jvccUNYBdTG4jJXSc_Rjx/preview" target="_blank">Applying Machine Learning to Improve Various Digital Twin Simulation Models</a>
             <p> &nbsp; </p>
             <a class="btn btn-success" href="https://drive.google.com/file/d/1-UTFf_XpwSSEhA9nS2OQo9ow6soyAgPL/view?usp=sharing" target="_blank">Optimizing the Bike Rebalancing Procedure for ValleyBike Share in Amherst, MA, USA</a>
           </div>
@@ -484,9 +480,7 @@
           <div class="icon-box">
             <div class="icon"><i class="icofont-gear"></i></div>
             <h4><a href="">C.A.D. Generation</a></h4>
-            <p>New Product Generation and Development with an Entrepreneurial Spirit</p>
-            <p> &nbsp; </p>
-            <a class="btn btn-success" href="https://drive.google.com/file/d/1Xt7LLtC6ugUMRo6nEdMLuckr6IXe5duR/preview" target="_blank">TransPharm: The Pharmacy After Dark for Everyone</a>
+            <p>New Product Generation, Customer - Minded Product Development</p>
             <p> &nbsp; </p>
             <a class="btn btn-success" href="https://drive.google.com/file/d/1rs1U6k6W3JIUPx7J9WAlrADRJG4EuQgG/preview" target="_blank">Autonomous Off-Grid Vending Machine with Thermo-electric Climate Control <i>(pat. pend.)</i></a>
             <p> &nbsp; </p>
@@ -496,31 +490,72 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <div class="icon"><i class="icofont-network"></i></div>
-            <h4><a href="">Networking</a></h4>
-            <p>Socially capable and confident, able to operate in many situations</p>
+            <div class="icon"><i class="icofont-world"></i></div>
+            <h4><a href="">Data Analysis Integration</a></h4>
+            <p>Implementing New Techniques to Complement Standard Simulation Procedures</p>
+            <p> &nbsp; </p>
+            <a class="btn btn-success" href="https://drive.google.com/file/d/16G0aq7xBGL7jvccUNYBdTG4jJXSc_Rjx/preview" target="_blank">Applying Machine Learning to Improve Various Digital Twin Simulation Models</a>
           </div>
         </div>
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+            <div class="icon-box">
+              <div class="icon"><i class="icofont-network"></i></div>
+              <h4><a href="">Entrepreneurship</a></h4>
+              <p>Socially capable and confident, able to operate in many situations</p>
+              <p> &nbsp; </p>
+              <a class="btn btn-success" href="https://drive.google.com/file/d/1Xt7LLtC6ugUMRo6nEdMLuckr6IXe5duR/preview" target="_blank">TransPharm: The Pharmacy After Dark for Everyone</a>
+            </div>
+        </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+            <div class="icon-box">
+              <div class="icon"><i class="icofont-institution"></i></div>
+              <h4><a href="">Instruction</a></h4>
+              <p>Capable of connecting with different types of students on a variety of subjects</p>
+              <p> &nbsp; </p>
+              <a class="btn btn-success" href="https://www.youtube.com/playlist?list=PLe0EJN9Fts8tqRm1JE0QtShqaE7VvoTnp" target="_blank">Onboarding to Structural Simulation on <b>3D</b>EXPERIENCE</a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+            <div class="icon-box">
+              <div class="icon"><i class="icofont-institution"></i></div>
+              <h4><a href="">Presentations</a></h4>
+              <p>Capable of connecting with different types of students on a variety of subjects</p>
+              <p> &nbsp; </p>
+              <a class="btn btn-success" href="https://www.youtube.com/watch?v=tNPeoFcj9Ks&t=0s" target="_blank">Improving Digital Twin Modeling Using Machine Learning (video)</a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+            <div class="icon-box">
+              <div class="icon"><i class="icofont-institution"></i></div>
+              <h4><a href="">Human Analytics</a></h4>
+              <p>Capable of connecting with different types of students on a variety of subjects</p>
+              <p> &nbsp; </p>
+              <a class="btn btn-success" href="https://drive.google.com/file/d/1McKnfpJd8U8ZzZVjOLhjukYxjzcwMUGO/view?usp=sharing" target="_blank">The Bilateral Role of the Power of Suggestion in Oppression</a>
+            </div>
+          </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="icofont-institution"></i></div>
-            <h4><a href="">Instruction</a></h4>
-            <p>Capable of connecting with different types of students on a variety of subjects</p>
+            <h4><a href="">Pedagogy</a></h4>
+            <p>Capable of developing instruction materials to improve instruction</p>
+            <p> &nbsp; </p>
+            <a class="btn btn-success" href="https://drive.google.com/file/d/1WEYEO6GHFo-QawM-5DsY9KdQXzf2mLoB/view?usp=sharing" target="_blank">Introduction to Generative Design and Optimization Course Description</a>
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
-          <div class="icon-box">
-            <div class="icon"><i class="icofont-world"></i></div>
-            <h4><a href="">Multilinguist</a></h4>
-            <p>English, Spanish, Telugu - can understand several others, and am willing to learn</p>
-          </div>
+
+
         </div>
 
+
+        </div>
       </div>
+</div>
 
-    </div>
   </section><!-- End Services Section -->
 
   <!-- ======= Portfolio Section ======= -->
