--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
-              <div class="icon"><i class="icofont-institution"></i></div>
+              <div class="icon"><i class="icofont-notebook"></i></div>
               <h4><a href="">Instruction</a></h4>
               <p>Capable of connecting with different types of students on a variety of subjects</p>
               <p> &nbsp; </p>
@@ -519,7 +519,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
-              <div class="icon"><i class="icofont-institution"></i></div>
+              <div class="icon"><i class="icofont-film"></i></div>
               <h4><a href="">Presentations</a></h4>
               <p>Capable of connecting with different types of students on a variety of subjects</p>
               <p> &nbsp; </p>
@@ -529,7 +529,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
-              <div class="icon"><i class="icofont-institution"></i></div>
+              <div class="icon"><i class="icofont-people"></i></div>
               <h4><a href="">Human Analytics</a></h4>
               <p>Capable of connecting with different types of students on a variety of subjects</p>
               <p> &nbsp; </p>
