--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           </div>
           <body>
       <div id="cntr">
-          The number of visitors is :
+                You are visitor #
           <span>0</span>
       </div>
         <script>
