--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
             <h4><a href="">Mathematical Modeling</a></h4>
             <p>Multidisciplinary applications and process modeling with focus on optimization</p>
             <p> &nbsp; </p>
-            <a class="btn btn-success" href="https://drive.google.com/file/d/1_qukzpLJdxBqmHG_WzRtzv-Pxo8e08co/view?usp=sharing" target="_blank">Modeling and Optimizing Battery Consumption of An Autonomous Electric Vehicle</a>
+            <a class="btn btn-success" href="https://drive.google.com/file/d/1DUBd27YI74Aw87xCgsiY_Pp7E8KwQZDh/view?usp=sharing" target="_blank">Modeling and Optimizing Battery Consumption of An Autonomous Electric Vehicle</a>
             <p> &nbsp; </p>
             <a class="btn btn-success" href="https://drive.google.com/file/d/1-UTFf_XpwSSEhA9nS2OQo9ow6soyAgPL/view?usp=sharing" target="_blank">Optimizing the Bike Rebalancing Procedure for ValleyBike Share in Amherst, MA, USA</a>
           </div>
@@ -494,7 +494,7 @@
             <h4><a href="">Data Analysis Integration</a></h4>
             <p>Implementing New Techniques to Complement Standard Simulation Procedures</p>
             <p> &nbsp; </p>
-            <a class="btn btn-success" href="https://drive.google.com/file/d/16G0aq7xBGL7jvccUNYBdTG4jJXSc_Rjx/preview" target="_blank">Applying Machine Learning to Improve Various Digital Twin Simulation Models</a>
+            <a class="btn btn-success" href="https://drive.google.com/file/d/1bs2yYJDYJ1Awt3ivTL6S9L6m1J2ZeaQl/view?usp=sharing" target="_blank">Applying Machine Learning to Improve Various Digital Twin Simulation Models</a>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
@@ -503,7 +503,7 @@
               <h4><a href="">Entrepreneurship</a></h4>
               <p>Socially capable and confident, able to operate in many situations</p>
               <p> &nbsp; </p>
-              <a class="btn btn-success" href="https://drive.google.com/file/d/1Xt7LLtC6ugUMRo6nEdMLuckr6IXe5duR/preview" target="_blank">TransPharm: The Pharmacy After Dark for Everyone</a>
+              <a class="btn btn-success" href="https://drive.google.com/file/d/1EHVHLBwzhbyZXgwRsyMcYwasUmHFYKY2/view?usp=sharing" target="_blank">TransPharm: The Pharmacy After Dark for Everyone</a>
             </div>
         </div>
 
