--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor's of Science</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Major:</strong> Mechanical Engineering</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> B.S. Mechanical Engineering</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Minor:</strong> Applied Mathematics</li>
+                <li><i class="icofont-rounded-right"></i> <strong>School: University of Massachusetts, Amherst</strong> </li>
               </ul>
             </div>
           </div>
