--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> B.S. Mechanical Engineering</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Minor:</strong> Applied Mathematics</li>
-                <li><i class="icofont-rounded-right"></i> <strong>School: University of Massachusetts, Amherst</strong> </li>
+                <li><i class="icofont-rounded-right"></i> <strong>School:</strong> UMass Amherst</strong> </li>
               </ul>
             </div>
           </div>
