--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
             <h4><a href="">Data Analysis Integration</a></h4>
             <p>Implementing New Techniques to Complement Standard Simulation Procedures</p>
             <p> &nbsp; </p>
-            <a class="btn btn-success" href="https://drive.google.com/file/d/1NRuND_iBGw_iorxsGbLrlEkjSvhhs0ty/view?usp=sharing" target="_blank">Improving Digital Twin Technology Using Machine Learning</a>
+            <a class="btn btn-success" href="https://drive.google.com/file/d/1BvnTbUwKVjmGX_lWb3llP6032g-FvC9e/view" target="_blank">Improving Digital Twin Technology Using Machine Learning</a>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
