--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
             <h4><a href="">Finite Element Analysis</a></h4>
             <p>Structural Mechanics, Computational Fluid Dynamics, Frequency Response Analysis</p>
             <p> &nbsp; </p>
-            <a class="btn btn-success" href="https://drive.google.com/file/d/1IguxUxV1uh7RXZq6dDZ3qgrOt7uukVLd/view?usp=sharing" target="_blank">Surveying The Efforts for Simulating the Human Diaphragm</a>
+            <a class="btn btn-success" href="https://drive.google.com/file/d/1erlQfcmIyh46orjzEV_6vlA7Gicuelnm/view" target="_blank">Surveying The Efforts for Simulating the Human Diaphragm</a>
             <p> &nbsp; </p>
             <a class="btn btn-success" href="https://drive.google.com/file/d/18IeU6lby89XNUhdISfl5tRSF6mpK-Z3R/view?usp=sharing" target="_blank">PowerPass: The Portable Phone Charger Dispenser</a>
           </div>
