--- a/index.html
+++ b/index.html
@@ -89,15 +89,15 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Citizenship:</strong> United States</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 22</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Location:</strong> Eastern Massachusetts, USA</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Undergrad:</strong> B.S. Mechanical Engineering (Applied Math Minor)</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Master's:</strong> Industrial Mathematics</li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> B.S. Mechanical Engineering</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Minor:</strong> Applied Mathematics</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 22</li>
                 <li><i class="icofont-rounded-right"></i> <strong>School:</strong> UMass Amherst</strong> </li>
+                <li><i class="icofont-rounded-right"></i> <strong>School:</strong> Worcester Polytechnic Institute</li>
               </ul>
             </div>
           </div>
