--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Citizenship:</strong> United States</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Undergrad:</strong> B.S. Mechanical Engineering (Applied Math Minor)</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Master's:</strong> Industrial Mathematics</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Master's:</strong> TBD</li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 22</li>
                 <li><i class="icofont-rounded-right"></i> <strong>School:</strong> UMass Amherst</strong> </li>
-                <li><i class="icofont-rounded-right"></i> <strong>School:</strong> Worcester Polytechnic Institute</li>
+                <li><i class="icofont-rounded-right"></i> <strong>School:</strong> TBD</li>
               </ul>
             </div>
           </div>
