--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 22</li>
-                <li><i class="icofont-rounded-right"></i> <strong>School:</strong> UMass Amherst</strong> </li>
+                <li><i class="icofont-rounded-right"></i> <strong>School:</strong> UMass Amherst</li>
                 <li><i class="icofont-rounded-right"></i> <strong>School:</strong> TBD</li>
               </ul>
             </div>
