--- a/index.html
+++ b/index.html
@@ -89,15 +89,15 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Citizenship:</strong> United States</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Undergrad:</strong> B.S. Mechanical Engineering (Applied Math Minor)</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Master's:</strong> TBD</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Undergrad:</strong> Mech. Engg. & Appl. Math</li>
+                <li><i class="icofont-rounded-right"></i> <strong>U.G. School:</strong> UMass Amherst</li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 22</li>
-                <li><i class="icofont-rounded-right"></i> <strong>School:</strong> UMass Amherst</li>
-                <li><i class="icofont-rounded-right"></i> <strong>School:</strong> TBD</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Master's:</strong> TBD</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Master's School:</strong> TBD</li>
               </ul>
             </div>
           </div>
