--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li><a href="https://drive.google.com/file/d/141CtG2lJuMXc-Z1QUiNcIdRDIOeYM7lg/preview" target="blank">Resume</a></li>
           <li><a href="#services">Services &amp; Projects</a></li>
           <li><a href="#portfolio">Visuals</a></li>
-          <li><a href="#videos">Engineering Videos</a></li>
+          <li><a href="https://www.youtube.com/channel/UC1yuISLe-oy-u6ofd_88PEw?view_as=subscriber">Engineering Videos</a></li>   
           <li><a href="#animations">Animations</a></li>
         </ul>
       </nav><!-- .nav-menu -->
