--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
   <meta property="og:title" content="Abhishek Ram" />
-  <meta property="og:description" content="Engineering a Better World For Us All" />
+  <meta property="og:description" content="Engineering a Better World For All" />
   <meta property="og:image" content="img/AbhishekRam_headshot.JPG" />
 
   <!-- Favicons -->
