--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="container">
       <h1><a href="index.html">Abhishek Ram</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <h2> Engineering A Better World For Us All </h2>
+      <h2> Engineering A Better World For All </h2>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
