--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 22</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Master's:</strong> TBD</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Master's School:</strong> TBD</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Master's:</strong> Mech. Engg. w/ focus in Reliability and Optimization</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Master's School:</strong> UMD College Park</li>
               </ul>
             </div>
           </div>
