--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </nav><!-- .nav-menu -->
 
       <div class="social-links">
-        <a href="https://www.facebook.com/abhi.ram.39904?ref=bookmarks" class="facebook" target="blank"><i class="icofont-facebook"></i></a>
+        <!- <a href="https://www.facebook.com/abhi.ram.39904?ref=bookmarks" class="facebook" target="blank"><i class="icofont-facebook"></i></a> ->
         <a href="https://www.instagram.com/abhishaq_attack/" class="instagram" target="blank"><i class="icofont-instagram"></i></a>
         <a href="https://www.linkedin.com/in/abhishekram8/" class="linkedin" target="blank"><i class="icofont-linkedin"></i></a>
         <a href="mailto:abhishek.ram.umass@gmail.com" class="email" target="blank"><i class="icofont-email"></i></a>
