--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
   <meta property="og:title" content="Abhishek Ram" />
-  <meta property="og:description" content="Engineering a Better World For All" />
+  <meta property="og:description" content="Engineering a Better World For Us All" />
   <meta property="og:image" content="img/AbhishekRam_headshot.JPG" />
 
   <!-- Favicons -->
@@ -45,22 +45,22 @@
     <div class="container">
       <h1><a href="index.html">Abhishek Ram</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <h2> Engineering A Better World For All </h2>
+      <h2> Engineering A Better World For Us All </h2>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="#header">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="https://drive.google.com/file/d/1waqjO4i9d9igxLk-feEgKHClh3R3uEIh/view?usp=sharing" target="blank">Resume</a></li>
+          <li><a href="https://drive.google.com/file/d/1gqsXciHUmNYHJ3uT9ETLgZ-u9bldw9KA/view?usp=sharing" target="blank">Resume</a></li>
           <li><a href="#services">Services &amp; Projects</a></li>
           <li><a href="#portfolio">Visuals</a></li>
-          <li><a href="https://www.youtube.com/channel/UC1yuISLe-oy-u6ofd_88PEw?view_as=subscriber" target="blank">Engineering Videos</a></li>   
+          <li><a href="https://www.youtube.com/channel/UC1yuISLe-oy-u6ofd_88PEw?view_as=subscriber" target="blank">Engineering Videos</a></li>
           <li><a href="#animations">Animations</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
       <div class="social-links">
-        <!-- <a href="https://www.facebook.com/abhi.ram.39904?ref=bookmarks" class="facebook" target="blank"><i class="icofont-facebook"></i></a> -->
+        <a href="https://www.facebook.com/abhi.ram.39904?ref=bookmarks" class="facebook" target="blank"><i class="icofont-facebook"></i></a>
         <a href="https://www.instagram.com/abhishaq_attack/" class="instagram" target="blank"><i class="icofont-instagram"></i></a>
         <a href="https://www.linkedin.com/in/abhishekram8/" class="linkedin" target="blank"><i class="icofont-linkedin"></i></a>
         <a href="mailto:abhishek.ram.umass@gmail.com" class="email" target="blank"><i class="icofont-email"></i></a>
@@ -98,8 +98,8 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 22</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Master's:</strong> Mech. Engg. w/ focus in Reliability and Optimization</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Master's School:</strong> UMD College Park</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Master's:</strong> TBD</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Master's School:</strong> TBD</li>
               </ul>
             </div>
           </div>
@@ -140,7 +140,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
             <i class="icofont-document-folder"></i>
-            <span data-toggle="counter-up">6</span>
+            <span data-toggle="counter-up">4</span>
             <p>Employments</p>
           </div>
         </div>
@@ -629,12 +629,12 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-              <img src="img/lightbulbresize.jpg" class="img-fluid" alt="">
+              <img src="img/smartwaterbottle (resized).jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Lightbulb</h4>
-              <p>Designed in SolidWorks</p>
+              <h4>Smart Water Bottle (Front View)</h4>
+              <p>Designed in Onshape</p>
               <div class="portfolio-links">
-                <a href="img/lightbulbresize.jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
+                <a href="img/smartwaterbottle (resized).jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
@@ -668,12 +668,12 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-              <img src="img/toaster side resize.jpg" class="img-fluid" alt="">
+              <img src="img/lightbulbresize (rotated).jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Toaster (Side View)</h4>
-              <p>Designed in Onshape</p>
+              <h4>Lightbulb</h4>
+              <p>Designed in SolidWorks</p>
               <div class="portfolio-links">
-                <a href="img/toaster side resize.jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
+                <a href="img/lightbulbresize (rotated).jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
@@ -702,7 +702,7 @@
             <img src="img/LaPlaceMonteCarloSim.jpg" class="img-fluid" alt="">
           <div class="portfolio-info">
             <div class="portfolio-links">
-              <video width="500" height="320" controls autoplay>
+              <video width="500" height="320" controls autoplay loop>
                 <source src="img/LaplaceMonteCarloPiSolution.mp4" type="video/mp4" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i>>
               </video>
             </div>
@@ -715,7 +715,7 @@
             <img src="img/Pareto Optimal Front.jpg" class="img-fluid" alt="">
           <div class="portfolio-info">
             <div class="portfolio-links">
-              <video width="500" height="320" controls autoplay>
+              <video width="500" height="320" controls autoplay loop>
                 <source src="img/ParetoOptFrontVideo.mp4" type="video/mp4" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i>>
               </video>
             </div>
@@ -728,7 +728,7 @@
             <img src="img/DSO Thumbnail.jpg" class="img-fluid" alt="">
           <div class="portfolio-info">
             <div class="portfolio-links">
-              <video width="500" height="320" controls autoplay>
+              <video width="500" height="320" controls autoplay loop>
                 <source src="img/Error Bounds.mp4" type="video/mp4" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i>>
               </video>
             </div>
